[package]
name = "serum-rs"
version = "0.2.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
]
edition = "2018"

[dependencies]
anchor-lang = "0.13"
solana-program = "1.7"
spl-token = "3.2"
serum_dex = "0.4"
serum-swap = { version = "0.4", features = ["no-entrypoint"] }
thiserror = "1.0"
safe-transmute = "0.11"
